[package]
name = "citp"
version = "0.2.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A full implementation of CITP - Controller Interface Transport Protocol."
readme = "README.md"
keywords = ["controller", "interface", "transport", "protocol", "lighting"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/citp.git"
homepage = "https://github.com/nannou-org/citp"
edition = "2021"

[dependencies]
byteorder = "1.2.3"
ucs2 = "0.3.2"
